Optimize collections: pre-size HashMaps in CraftMetaItem and replace Arrays.asList with Set.of in CraftLegacy for better performance